# rust_overlord_demo

./: Cargo.toml  package-lock.json
core/: Cargo.toml
core/examples/: task_manager_demo.rs
core/src/: lib.rs
core/tests/: message_handling_tests.rs  message_serialization_tests.rs  serialization_tests.rs  task_actor_tests.rs  task_manager_tests.rs
web/: Cargo.toml
web/src/: liveview.rs  main.rs  modal.rs  shared_header.rs
web/static/: app.js  index.html  redirect.html  styles.css  telemetry_test.html  ws_connect.js
