[package]
name = "task-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"

[dev-dependencies]
actix-rt = "2.11.0"
serde_json = "1.0"